--- a/02.web/css/reset.css
+++ b/02.web/css/reset.css
@@ -22,3 +22,19 @@ time, mark, audio, video {
 	font: inherit;
 	vertical-align: baseline;
 }
+
+a { 
+	text-decoration: none;
+	color : #222;
+}
+a:hover { color : #390;}
+
+
+/* 폰트 초기화  */
+
+body, input, textarea, select, button, table {
+	font-family: 'Nanum Gothic', sans-serif;
+	color : #222;
+	font-size:  13px;
+	line-height: 1.5;
+}
