--- a/02.web/css/reset.css
+++ b/02.web/css/reset.css
@@ -3,7 +3,7 @@
 /* 여백 초기화 */
 
 html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
 del, dfn, em, img, ins, kbd, q, s, samp,
 small, strike, strong, sub, sup, tt, var,
@@ -29,6 +29,17 @@ a {
 }
 a:hover { color : #390;}
 
+/* 불릿기호 초기화 */
+dl,ul,li,ol,menu {
+	list-style: none;
+}
+
+/* 제목태그 초기화 */ 
+h1,h2,h3,h4,h5,h6 {
+	font-size: 13px;
+	color:#222;
+	font-weight: normal;
+}
 
 /* 폰트 초기화  */
 
