--- a/02.web/css/style.css
+++ b/02.web/css/style.css
@@ -11,13 +11,13 @@
 #skip a:focus {top:0;}
 
 /* 레이아웃 */
-#wrap{width:100%;}
+#wrap{}
 
-#header{width:100%; height: 325px; background : url(../img/header_bg.jpg) top center repeat-x ;}
+#header{ height: 325px; background : url(../img/header_bg.jpg) top center repeat-x ;}
 
-#contents{width:100%; height: 800px; background-color: #222;}
+#contents{}
 
-#footer{width:100%; height: 200px; background-color: #333;}
+#footer{ height: 200px; background-color: #333;}
 
 /* 컨테이너 */
 
@@ -25,30 +25,26 @@
 
 /* 컨텐츠 */
 
-#cont_nav{width:100%; height: 200px; background-color: #333;}
-#cont_title{width:100%; height: 200px; background-color: #444;}
-#cont_ban{width:100%; height: 200px; background-color: #555;}
-#cont_cont{width:100%; height: 200px; background-color: #666;}
+#cont_nav{background-color: #f6fdff;}
+#cont_title{background-color: #EAF7FD;}
+#cont_ban{background-color: #dceff7;}
+#cont_cont{background-color: #f6fdff;}
 
 
 /* 헤더 */
 
-.header { }
-
 .header .header-menu{text-align: right;}
 .header .header-menu a {color : #FFF; display: inline-block; padding: 10px 0px 10px 13px;}
 .header .header-menu a:hover {color : #666;}
-
 .header .header-title{text-align : center;}
 .header .header-title h1{background-color: #4aa8d4;
-                        font-size: 28px;  margin-top:40px; padding:6px 20px; display: inline-block; color: #fff;
+                        font-size: 28px;  margin: 40px 0px 0px 0px; padding:6px 20px; display: inline-block; color: #fff;
                         font-weight: normal; text-transform: uppercase;}
-
 .header .header-title a { display: inline-block; background-color: #2698cb; font-size:18px;
 color:#fff; padding : 6px 20px; margin-top: -5px;}
-
 .header .header-icon{ text-align: center; margin-top : 30px;}
 .header .header-icon a {width : 60px; height : 60px; display: inline-block; background : url(../img/icon.png); margin:3px;}
+
 .header .header-icon a.icon1 {background-position: 0 0;}
 .header .header-icon a.icon1:hover {background-position: -60px 0;}
 
@@ -60,3 +56,79 @@ color:#fff; padding : 6px 20px; margin-top: -5px;}
 
 .header .header-icon a.icon4 {background-position: 0 -180px;}
 .header .header-icon a.icon4:hover  {background-position: -60px -180px;}
+
+/* float:left 로 인한 영역깨짐(height:0) 방지법
+1. 깨지는 영역에 똑같이 float:left 사용. (X) --> 모든 박스에 float:left 사용하게됨
+2. float의 성질을 차단하는 clear:both; 사용 (X) --> 어떤 영역이 깨졌는지 찾기 어려움
+3. float을 사용한 상위 박스에 overflow:hidden; 을 사용 (0) --> 현재는 가장 많이 사용 (2019)
+4. clearfix를 사용합니다.(0) --> 반응형에서 배움 ㄴ*/
+
+/* 전체 메뉴 */
+
+.nav {overflow : hidden; padding: 30px 0px;}
+.nav > div { float : left; width: 40%;}
+.nav > div:last-child {width: 20%;} /* ie9부터 사용 가능*/
+.nav > div.last {width:20%;}
+.nav > div h3 {font-size: 18px; color : #25a2d0; margin-bottom:4px;}
+.nav > div ol {overflow:hidden;}
+.nav > div ol li {float:left; width:50%;}
+.nav > div:last-child ol li {width:100%;}
+.nav > div ol li a:hover {text-decoration: underline;}
+
+/* 콘텐츠 타이틀 */
+
+.title { position:relative;} 
+.title h2 {font-size: 40px; text-align: center; padding: 5px 0px; letter-spacing: 2px; color:#2c94c4;
+font-family: 'Nanum Brush Script', cursive;; margin : 0px;}
+.title .btn { position: absolute; top:5px; right:0; width: 60px; height: 60px;
+background : url(../img/icon.png) no-repeat 0 -600px;}
+
+
+/* 배너 */
+.banner {position: relative; padding : 24px 0px 20px 0px;}
+.banner a.prev {position:absolute;  left:-80px; top : 60px;  width:43px; height: 43px; background : url(../img/icon.png) no-repeat -150px 0px;}
+.banner a.next {position:absolute;  right:-80px;  top : 60px;  width:43px; height: 43px; background : url(../img/icon.png) no-repeat -150px -43px;}
+.banner a.prev:hover {background : url(../img/icon.png) no-repeat -193px 0px;}
+.banner a.next:hover {background : url(../img/icon.png) no-repeat -193px -43px;}
+
+.banner ul {overflow: hidden;}
+.banner ul li { float:left; width: 330px;}
+.banner ul li:nth-child(2) {text-align : center;} /* ie9부터 적용 */
+.banner ul li:last-child {text-align : right;} /* ie9부터 적용 */
+
+
+.banner ul li.ban_img1 { text-align : left;}
+.banner ul li.ban_img2 { text-align : center;}
+.banner ul li.ban_img3 { text-align : right;}
+.banner ul li img { border:4px solid #dcdcdc;}
+.banner ul li img:hover { border-color: #98bcdc;}
+
+/* 컨텐츠 */
+
+.cont{overflow: hidden; padding-top : 30px;}
+.cont .column{ position:relative; float:left; width: 289px; height: 363px; margin: 0 30px 30px 0; padding-right:30px;}
+.cont .col1 {border-right : 1px solid #c8c8c8; }
+.cont .col2 {border-right : 1px solid #c8c8c8;}
+.cont .col3 {margin-right : 0; padding-right: 0;}
+.cont .col4 {border-right : 1px solid #c8c8c8;}
+.cont .col5 {border-right : 1px solid #c8c8c8;}
+.cont .col6 {margin-right : 0; padding-right: 0;}
+
+.cont .column .ico_img {display: block; width: 60px; height: 60px;
+background : url(../img/icon.png) no-repeat; position: absolute; left: -3px; top: 15px;} 
+.cont .column .ico_title {padding-left : 70px; font-size: 16px; color : #2c94c4;} 
+.cont .column .ico_desc {padding-left : 70px; 
+    padding-bottom : 15px; border-bottom : 1px solid #d0d0d0;} 
+
+.cont .col1 .ico_img { background-position: 0px -240px;}
+.cont .col2 .ico_img { background-position: 0px -300px;}
+.cont .col3 .ico_img { background-position: 0px -360px;}
+.cont .col4 .ico_img { background-position: 0px -420px;}
+.cont .col5 .ico_img { background-position: 0px -480px;}
+.cont .col6 .ico_img { background-position: 0px -540px;}
+.cont .col1 .ico_img:hover { background-position: -60px -240px;}
+.cont .col2 .ico_img:hover { background-position: -60px -300px;}
+.cont .col3 .ico_img:hover { background-position: -60px -360px;}
+.cont .col4 .ico_img:hover { background-position: -60px -420px;}
+.cont .col5 .ico_img:hover { background-position: -60px -480px;}
+.cont .col6 .ico_img:hover { background-position: -60px -540px;}
