--- a/02.web/css/reset.css
+++ b/02.web/css/reset.css
@@ -77,4 +77,9 @@ body, input, textarea, select, button, table {
 	height: 0;
 	line-height: 0;
 	text-indent: -9999px;
+
+	color:#222;
+}
+a:hover {
+	color : #390;
 }
