--- a/02.web/css/style.css
+++ b/02.web/css/style.css
@@ -105,7 +105,7 @@ background : url(../img/icon.png) no-repeat 0 -600px;}
 
 /* 컨텐츠 */
 
-.cont{overflow: hidden; padding-top : 30px;}
+.cont{overflow: hidden; padding-top : 25px;}
 .cont .column{ position:relative; float:left; width: 289px; height: 363px; margin: 0 30px 30px 0; padding-right:30px;}
 .cont .col1 {border-right : 1px solid #c8c8c8; }
 .cont .col2 {border-right : 1px solid #c8c8c8;}
@@ -115,10 +115,9 @@ background : url(../img/icon.png) no-repeat 0 -600px;}
 .cont .col6 {margin-right : 0; padding-right: 0;}
 
 .cont .column .ico_img {display: block; width: 60px; height: 60px;
-background : url(../img/icon.png) no-repeat; position: absolute; left: -3px; top: 15px;} 
+background : url(../img/icon.png) no-repeat; position: absolute; left: 0px; top: 15px;} 
 .cont .column .ico_title {padding-left : 70px; font-size: 16px; color : #2c94c4;} 
-.cont .column .ico_desc {padding-left : 70px; 
-    padding-bottom : 15px; border-bottom : 1px solid #d0d0d0;} 
+.cont .column .ico_desc {margin-top : -10px; padding-left : 70px; padding-bottom : 15px; border-bottom : 1px solid #d0d0d0;} 
 
 .cont .col1 .ico_img { background-position: 0px -240px;}
 .cont .col2 .ico_img { background-position: 0px -300px;}
@@ -132,3 +131,35 @@ background : url(../img/icon.png) no-repeat; position: absolute; left: -3px; top
 .cont .col4 .ico_img:hover { background-position: -60px -420px;}
 .cont .col5 .ico_img:hover { background-position: -60px -480px;}
 .cont .col6 .ico_img:hover { background-position: -60px -540px;}
+
+
+/* 게시판 */
+.notice {position: relative;}
+.notice h4 { font-size: 14px; color: #0093bd; margin-bottom : 5px; font-weight: bold;}
+.notice ul li {overflow: hidden; text-overflow: ellipsis; white-space: nowrap; background : url(../img/dot.gif) no-repeat 0px 8px; padding-left: 8px;} 
+.noitce ul li a {font-size: 12px;}
+.notice a.more{position: absolute; right : 0; top:0; display: block; background:url(../img/icon.png)
+-150px -90px; width: 17px; height: 17px;}
+
+/* 게시판2 */
+
+.notice2 {position: relative; margin-top: 15px;}
+.notice2 h4 {font-size: 14px; color: #0093bd; margin-bottom : 5px; font-weight: bold;}
+.notice2 ul {}
+.notice2 li { overflow: hidden; background : url(../img/dot.gif) no-repeat 0px 8px; padding-left: 8px;}
+.notice2 li a {float:left; width: 65%; overflow:hidden; text-overflow: ellipsis; white-space: nowrap;}
+.notice2 li span {float: right; width: 30%; text-align: right;}
+.notice2 a.more {position: absolute; right : 0; top:0; display: block; background:url(../img/icon.png)
+    -150px -90px; width: 17px; height: 17px;}
+
+
+/* 게시판3 */
+
+.notice3 {position:relative;}
+.notice3 h4 {font-size: 14px; color: #0093bd; margin-bottom : 5px; font-weight: bold;}
+.notice3 li {position: relative; padding: 8px 0 15px 60px;}
+.notice3 li a img { width:50px; height: 50px; position: absolute; left: 0; top: 0; border: 1px solid #0093bd;}
+.notice3 li a strong {display: block; overflow:hidden; text-overflow: ellipsis; white-space: nowrap;}
+.notice3 li a span {display: block; overflow:hidden; text-overflow: ellipsis; white-space: nowrap; font-size: 12px;}
+.notice3 a.more{position: absolute; right : 0; top:0; display: block; background:url(../img/icon.png)
+    -150px -90px; width: 17px; height: 17px;}
