--- a/02.web/css/reset.css
+++ b/02.web/css/reset.css
@@ -34,11 +34,19 @@ dl,ul,li,ol,menu {
 	list-style: none;
 }
 
+/* 테두리 초기화 */
+
+img, fieldset  {
+	border: 0 none;
+}
+
 /* 제목태그 초기화 */ 
 h1,h2,h3,h4,h5,h6 {
 	font-size: 13px;
+	
 	color:#222;
 	font-weight: normal;
+	
 }
 
 /* 폰트 초기화  */
