--- a/02.web/css/reset.css
+++ b/02.web/css/reset.css
@@ -4,7 +4,7 @@
 
 html, body, div, span, applet, object, iframe,
 p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
+a, abbr, acronym, big, cite, code,
 del, dfn, img, ins, kbd, q, s, samp,
 small, strike, sub, sup, tt, var,
 b, u, i, center,
@@ -33,6 +33,8 @@ a:hover { color : #390;}
 dl,ul,li,ol,menu {
 	list-style: none;
 }
+/* 버튼 초기화 */
+button {border:0}
 
 /* 테두리 초기화 */
 
@@ -58,7 +60,7 @@ body, input, textarea, select, button, table{
 	line-height: 1.5;
 }
 /* 폰트스타일 초기화 */   
-em {
+em,address {
 	font-style: normal;
 }
 
