--- a/02.web/css/style.css
+++ b/02.web/css/style.css
@@ -17,7 +17,7 @@
 
 #contents{}
 
-#footer{ height: 200px; background-color: #333;}
+#footer{border-top 1px solid #eee;}
 
 /* 컨테이너 */
 
@@ -25,7 +25,7 @@
 
 /* 컨텐츠 */
 
-#cont_nav{background-color: #f6fdff;}
+#cont_nav{background-color: #f6fdff; display: none;}
 #cont_title{background-color: #EAF7FD;}
 #cont_ban{background-color: #dceff7;}
 #cont_cont{background-color: #f6fdff;}
@@ -82,10 +82,11 @@ color:#fff; padding : 6px 20px; margin-top: -5px;}
 font-family: 'Nanum Brush Script', cursive;; margin : 0px;}
 .title .btn { position: absolute; top:5px; right:0; width: 60px; height: 60px;
 background : url(../img/icon.png) no-repeat 0 -600px;}
+.title .btn.on {background-position: 0 -660px;}
 
 
 /* 배너 */
-.banner {position: relative; padding : 24px 0px 20px 0px;}
+/* .banner {position: relative; padding : 24px 0px 20px 0px;}
 .banner a.prev {position:absolute;  left:-80px; top : 60px;  width:43px; height: 43px; background : url(../img/icon.png) no-repeat -150px 0px;}
 .banner a.next {position:absolute;  right:-80px;  top : 60px;  width:43px; height: 43px; background : url(../img/icon.png) no-repeat -150px -43px;}
 .banner a.prev:hover {background : url(../img/icon.png) no-repeat -193px 0px;}
@@ -93,15 +94,29 @@ background : url(../img/icon.png) no-repeat 0 -600px;}
 
 .banner ul {overflow: hidden;}
 .banner ul li { float:left; width: 330px;}
-.banner ul li:nth-child(2) {text-align : center;} /* ie9부터 적용 */
-.banner ul li:last-child {text-align : right;} /* ie9부터 적용 */
+.banner ul li:nth-child(2) {text-align : center;} 
+.banner ul li:last-child {text-align : right;} 
 
 
 .banner ul li.ban_img1 { text-align : left;}
 .banner ul li.ban_img2 { text-align : center;}
 .banner ul li.ban_img3 { text-align : right;}
 .banner ul li img { border:4px solid #dcdcdc;}
-.banner ul li img:hover { border-color: #98bcdc;}
+.banner ul li img:hover { border-color: #98bcdc;} */
+
+/* 슬릭배너 */
+.banner {position: relative; padding : 24px 0px 40px;}
+.banner .slick-prev {position:absolute;  left:-80px; top : 80px;  width:43px; height: 43px; background : url(../img/icon.png) no-repeat -150px 0px; text-indent: -9999px;}
+.banner .slick-next {position:absolute;  right:-80px;  top : 80px;  width:43px; height: 43px; background : url(../img/icon.png) no-repeat -150px -43px; text-indent: -9999px;}
+.banner .slick-prev:hover { background : url(../img/icon.png) no-repeat -193px 0px;}
+.banner .slick-next:hover { background : url(../img/icon.png) no-repeat -193px -43px;}
+.banner img { border:4px solid #dcdcdc;}
+.banner img:hover { border-color: #98bcdc;}
+.banner .slick-slide {margin: 10px;}
+.banner .slick-dots {position: absolute; bottom: 15px; display: block; width: 100%; text-align: center;}
+.banner .slick-dots li {display: inline-block; width: 15px; height: 15px; margin: 5px;}
+.banner .slick-dots li button {font-size: 0; line-height: 0; display: block; width: 15px; height: 15px; cursor: pointer; background:#5dbfeb; border-radius: 50%;}
+.banner .slick-dots li.slick-active button {background: #2b91c8;}
 
 /* 컨텐츠 */
 
@@ -211,16 +226,16 @@ width: 100%; height: 100%; }
 
 /* 탭메뉴 */
 
-.tap_menu {position: relative; border : 1px solid #ccc; padding: 8px; height: 105px;}
-.tap_menu ul {overflow : hidden; border-bottom: 1px solid #ccc; }
-.tap_menu ul li {float: left; border:1px solid #ccc; margin-bottom: -1px; margin-right: -1px;}
-.tap_menu ul li a{ display: block; padding: 5px 10px; }
-.tap_menu ul li ul {position : absolute; left: 0; top: 48px; width: 270px; border: 0;}
-.tap_menu ul li ul li{float: none; border:0; background : url(../img/dot.gif) no-repeat 9px 8px; padding-left: 18px;}
-.tap_menu ul li ul li a{ overflow: hidden; text-overflow: ellipsis; white-space: nowrap; width: 100%; padding : 0 0 3px 0; }
-.tap_menu ul li.active {background : #2c94c4;}
-.tap_menu ul li.active a { color : #fff; }
-.tap_menu ul li.active ul li a { color : #333;}
+.tab_menu {position: relative; border : 1px solid #ccc; padding: 8px; height: 105px;}
+.tab_menu ul {overflow : hidden; border-bottom: 1px solid #ccc; }
+.tab_menu ul li {float: left; border:1px solid #ccc; margin-bottom: -1px; margin-right: -1px;}
+.tab_menu ul li a{ display: block; padding: 5px 10px; }
+.tab_menu ul li ul {position : absolute; left: 0; top: 48px; width: 270px; border: 0;}
+.tab_menu ul li ul li{float: none; border:0; background : url(../img/dot.gif) no-repeat 9px 8px; padding-left: 18px;}
+.tab_menu ul li ul li a{ overflow: hidden; text-overflow: ellipsis; white-space: nowrap; width: 100%; padding : 0 0 3px 0; }
+.tab_menu ul li.active {background : #2c94c4;}
+.tab_menu ul li.active a { color : #fff; }
+.tab_menu ul li.active ul li a { color : #333;}
 
 
 /* 게시판4 */
@@ -278,3 +293,12 @@ width: 100%; height: 100%; }
 .popup ul li {float: left; width:93px; margin-right: 5px;}
 .popup li.last{ margin-right: 0;}
 .popup li img {width: 100%;}
+
+
+/* 푸터 */
+
+.footer { padding: 25px 0px; text-align: center;}
+.footer ul {margin-bottom: 20px;}
+.footer ul li { display: inline; padding: 0 7px 0 10px; position: relative;}
+.footer ul li::before { content:''; width: 1px; height: 12px; background : #ccc; position: absolute; left:0; top:2px;}
+.footer ul li:first-child::before {width: 0; height: 0;}
