--- a/02.web/css/style.css
+++ b/02.web/css/style.css
@@ -251,8 +251,8 @@ width: 100%; height: 100%; }
 
 
 /* 갤러리 */
-.gallery {border : 1px solid #ccc; height: 254px; position: relative; overflow: hidden;}
-.gallery h4 { font-size: 14px; color : #0093bd; border-bottom: 1px solid #ccc; padding: 10px 0px 8px 11px; font-weight: bold;}
+.gallery {border : 1px solid #ccc; height: 255px; position: relative; }
+.gallery h4 { font-size: 14px; color : #0093bd; border-bottom: 1px solid #ccc; padding:  0px 8px 11px; font-weight: bold;}
 .gallery .gallery_btn {position: absolute; right : 5px; top:7px;}
 .gallery .gallery_btn ul {overflow: hidden;}
 .gallery .gallery_btn li {float : left; margin: 1px 2px;}
@@ -269,6 +269,16 @@ width: 100%; height: 100%; }
 .gallery .gallery_img img {width: 100%;}
 
 
+/* 슬릭 갤러리 */
+.gallery .gallery_btn button {float : left; margin: 1px 2px; display: block; width: 23px; height: 23px; background: url(../img/icon.png) no-repeat;} 
+.gallery .gallery_btn .gb_icon1 {background-position: -150px -120px;}
+.gallery .gallery_btn .gb_icon2 {background-position: -150px -143px;}
+.gallery .gallery_btn .gb_icon3 {background-position: -150px -166px;}
+.gallery .gallery_btn .gb_icon4 {background-position: -150px -189px;}
+.gallery .gallery_btn .gb_icon1:hover {background-position: -173px -120px;}
+.gallery .gallery_btn .gb_icon2:hover {background-position: -173px -143px;}
+.gallery .gallery_btn .gb_icon3:hover {background-position: -173px -166px;}
+.gallery .gallery_btn .gb_icon4:hover {background-position: -173px -189px;}
 
 /* 로그인 폼 */
 #login_form { background : #f2f4f5; padding: 15px;}
@@ -302,3 +312,11 @@ width: 100%; height: 100%; }
 .footer ul li { display: inline; padding: 0 7px 0 10px; position: relative;}
 .footer ul li::before { content:''; width: 1px; height: 12px; background : #ccc; position: absolute; left:0; top:2px;}
 .footer ul li:first-child::before {width: 0; height: 0;}
+
+
+
+/* 레이어팝업 */
+#layer {display:none; position: fixed; left: 50px; top: 50px; width: 700px; border: 10px solid #dceff7; box-shadow: 3px 3px 10px rgba(0,0,0,0.4);}
+#layer img {width: 100%; display: block;}
+#layer .close {position: absolute; right: 20px;top: 20px; background:#0093bd; padding: 1px 6px; color :#fff;}
+#layer .close:hover {text-decoration: underline;}
