--- a/02.web/css/style.css
+++ b/02.web/css/style.css
@@ -64,9 +64,7 @@
 }
 
 #cont_contents {
-    width: 100%;
-    height: 200px;
-    background-color: #666;
+    background-color: #f6fdff;
 
 }
 
@@ -287,4 +285,512 @@
 
 .ban ul li img:hover {
     border-color: #98bcdc;
+}
+
+/* 컨텐츠 */
+
+.cont {
+    overflow: hidden;
+    padding-top: 30px;
+}
+
+.cont .column {
+    position: relative;
+    width: 289px;
+    height: 363px;
+    float: left;
+    margin: 0 30px 30px 0;
+    padding-right: 30px;
+}
+
+.cont .col1 {
+    border-right: 1px solid #c8c8c8;
+}
+
+.cont .col2 {
+    border-right: 1px solid #c8c8c8;
+
+}
+
+.cont .col3 {
+    margin-right: 0;
+    padding-right: 0;
+}
+
+.cont .col4 {
+    border-right: 1px solid #c8c8c8;
+
+}
+
+.cont .col5 {
+    border-right: 1px solid #c8c8c8;
+
+}
+
+.cont .col6 {
+    margin-right: 0;
+    padding-right: 0;
+}
+
+.cont .column .ico_img {
+    display: block;
+    width: 60px;
+    height: 60px;
+    background: url("../img/icon.png") no-repeat;
+    position: absolute;
+    left: 0;
+    top: 0;
+}
+
+.cont .column .ico_tit {
+    padding-left: 70px;
+    color: #2c94c4;
+    font-size: 16px;
+
+}
+
+.cont .column .ico_desc {
+    padding-left: 70px;
+    border-bottom: 1px solid #d0d0d0;
+    padding-bottom: 15px;
+    margin-bottom: 15px;
+}
+
+.cont .col1 .ico_img {
+    background-position: 0px -240px;
+}
+
+
+.cont .col2 .ico_img {
+    background-position: 0px -300px;
+}
+
+.cont .col3 .ico_img {
+    background-position: 0px -360px;
+}
+
+.cont .col4 .ico_img {
+    background-position: 0px -420px;
+}
+
+.cont .col5 .ico_img {
+    background-position: 0px -480px;
+}
+
+.cont .col6 .ico_img {
+    background-position: 0px -540px;
+}
+
+.cont .col1 .ico_img {
+    background-position: 0px -240px;
+}
+
+
+.cont .col1 .ico_img:hover {
+    background-position: -60px -240px;
+}
+
+.cont .col2 .ico_img:hover {
+    background-position: -60px -300px;
+}
+
+.cont .col3 .ico_img:hover {
+    background-position: -60px -360px;
+}
+
+.cont .col4 .ico_img:hover {
+    background-position: -60px -420px;
+}
+
+.cont .col5 .ico_img:hover {
+    background-position: -60px -480px;
+}
+
+.cont .col6 .ico_img:hover {
+    background-position: -60px -540px;
+}
+
+
+/* notice */
+
+.notice {
+    position: relative;
+}
+
+.notice h4 {
+    font-size: 14px;
+    color: #0093bd;
+    padding-bottom: 3px;
+    font-weight: 700;
+}
+
+
+.notice ul li {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    background: url("../img/dot.gif") no-repeat 0 8px;
+    padding-left: 8px;
+
+}
+
+.notice ul li a {
+    font-size: 12px;
+}
+
+.notice a.more {
+    position: absolute;
+    right: 0;
+    top: 0;
+    display: block;
+    background: url("../img/icon.png") no-repeat -150px -90px;
+    width: 17px;
+    height: 17px;
+}
+
+.notice a.more:hover {
+    background: url("../img/icon.png") no-repeat -167px -90px;
+
+}
+
+/* notice2 */
+.notice2 {
+    position: relative;
+    margin-top: 15px;
+}
+
+.notice2 h4 {
+    font-size: 14px;
+    color: #0093bd;
+    padding-bottom: 3px;
+    font-weight: 700;
+}
+
+.notice2 ul {}
+
+.notice2 ul li {
+    overflow: hidden;
+    background: url("../img/dot.gif") no-repeat 0 8px;
+    padding-left: 8px;
+}
+
+.notice2 ul li a {
+    float: left;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    width: 65%;
+}
+
+.notice2 ul li span {
+    width: 35%;
+    text-align: right;
+    float: right;
+
+}
+
+.notice2 a.more {
+    position: absolute;
+    right: 0;
+    top: 0;
+    display: block;
+    background: url("../img/icon.png") no-repeat -150px -90px;
+    width: 17px;
+    height: 17px;
+}
+
+.notice2 a.more:hover {
+    background: url("../img/icon.png") no-repeat -167px -90px;
+
+}
+
+/* notice3 */
+.notice3 {
+    position: relative;
+}
+
+.notice3 h4 {
+    font-size: 14px;
+    color: #0093bd;
+    padding-bottom: 3px;
+    font-weight: 700;
+    margin-bottom: 5px;
+}
+
+.notice3 ul li {
+    position: relative;
+    padding: 8px 0 14px 60px;
+}
+
+.notice3 ul li a img {
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    left: 0;
+    top: 0;
+    border: 1px solid #0093bd;
+}
+
+.notice3 ul li a strong {
+    display: block;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+.notice3 ul li a span {
+    display: block;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    font-size: 12px;
+}
+
+.notice3 a.more {
+    position: absolute;
+    right: 0;
+    top: 0;
+    display: block;
+    background: url("../img/icon.png") no-repeat -150px -90px;
+    width: 17px;
+    height: 17px;
+}
+
+.notice3 a.more:hover {
+    background: url("../img/icon.png") no-repeat -167px -90px;
+
+}
+
+/* notice_hover */
+.notice_hover h4 {
+    font-size: 14px;
+    color: #0093bd;
+    padding-bottom: 3px;
+    font-weight: 700;
+}
+
+.notice_hover ul {
+    overflow: hidden;
+}
+
+.notice_hover ul li {
+    width: 93px;
+    float: left;
+    margin-right: 5px;
+    text-align: center;
+}
+
+.notice_hover ul li:last-child {
+    margin-right: 0;
+}
+
+.notice_hover ul li a span {
+    position: relative;
+    width: 93px;
+    height: 93px;
+    display: block;
+}
+
+.notice_hover ul li a span img {
+    width: 100%;
+    display: block;
+}
+
+.notice_hover ul li a span em {
+    position: absolute;
+    left: 0;
+    top: 0;
+    background-color: rgba(0, 0, 0, 0.7);
+    color: #fff;
+    width: 100%;
+    height: 100%;
+    line-height: 93px;
+    visibility: hidden;
+}
+
+.notice_hover ul li a span:hover em {
+    visibility: visible;
+}
+
+.notice_hover ul li a strong {
+    padding-top: 3px;
+    display: inline-block;
+    font-size: 12px;
+}
+
+.notice_hover ul li:last-child {
+    margin-right: 0;
+}
+
+/* notice_hover2 */
+
+.notice_hover2 ul {
+    overflow: hidden;
+}
+
+.notice_hover2 ul li {
+    width: 93px;
+    float: left;
+    margin-right: 5px;
+    text-align: center;
+}
+
+.notice_hover2 ul li:last-child {
+    margin-right: 0;
+}
+
+.notice_hover2 ul li a span {
+    position: relative;
+    width: 93px;
+    height: 93px;
+    display: block;
+}
+
+.notice_hover2 ul li a span img {
+    width: 100%;
+    display: block;
+}
+
+.notice_hover2 ul li a span em {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.7);
+    color: #fff;
+    width: 100%;
+    visibility: hidden;
+}
+
+.notice_hover2 ul li a span:hover em {
+    visibility: visible;
+}
+
+.notice_hover2 ul li a strong {
+    padding-top: 3px;
+    display: inline-block;
+    font-size: 12px;
+}
+
+.notice_hover2 ul li:last-child {
+    margin-right: 0;
+}
+
+/* 컨텐츠 요소를 보이지 않게 하는 방법 
+1. display : none -- display:blcok (영역 사라짐)
+2. visibility : hidden -- visibility : visible (영역 유지)
+3. opacity : 0 -- opacity:1 (영역 유지)
+4. width : 0, height:0, overflow:hidden; */
+
+
+
+/* tab_menu */
+
+.tab_menu {
+    position: relative;
+    border: 1px solid #ccc;
+    padding: 8px;
+    height: 105px;
+}
+
+.tab_menu ul {
+    overflow: hidden;
+    border-bottom: 1px solid #ccc;
+}
+
+.tab_menu ul li {
+    float: left;
+    border: 1px solid #ccc;
+    /* 텝메뉴 공지사항 border값 한줄로 나오게하기 */
+    margin-right: -1px;
+    margin-bottom: -1px;
+}
+
+.tab_menu ul li a {
+    display: block;
+    padding: 5px 10px;
+}
+
+.tab_menu ul li ul {
+    position: absolute;
+    left: 0;
+    top: 48px;
+    border: 0;
+    width: 270px;
+}
+
+.tab_menu ul li ul li {
+    float: none;
+    border: 0;
+    background: url("../img/dot.gif") no-repeat 9px 8px;
+    padding-left: 18px;
+
+}
+
+.tab_menu ul li ul li a {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    width: 100%;
+    padding: 0 0 3px 0;
+}
+
+.tab_menu ul>li.active {
+    background-color: #2c94c4;
+}
+
+.tab_menu ul>li.active>a {
+    color: #fff;
+}
+
+
+/* notice4 */
+
+.notice4 {
+    position: relative;
+    border: 1px solid #ccc;
+}
+
+.notice4 h4 {
+    padding: 8px 10px;
+    border-bottom: 1px solid #ccc;
+    color: #0093bd;
+    font-size: 14px;
+    font-weight: 700;
+}
+
+.notice4 h4 em {
+    color: #cf3292;
+}
+
+.notice4 ul {
+    padding: 10px;
+}
+
+.notice4 ul li {
+    overflow: hidden;
+    width: 100%;
+    background: url("../img/dot.gif") no-repeat 0 8px;
+    padding-left: 8px;
+    padding-bottom: 2px;
+
+}
+
+.notice4 ul li a {
+    float: left;
+    width: 60%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+.notice4 ul li span {
+    float: right;
+    text-align: left;
+    width: 30%;
+}
+
+.notice4 a.more {
+    position: absolute;
+    right: 9px;
+    top: 9px;
 }
