--- a/02.web/css/reset.css
+++ b/02.web/css/reset.css
@@ -162,6 +162,11 @@ table {
     line-height: 1.5;
 }
 
+/* 버튼 초기화 */
+button {
+    border: none;
+}
+
 /* IR기법 */
 /* 의미있는 이미지의 대체 텍스트를 제공하는 경우 */
 .ir_pm {
